--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "lucide-react": "^0.548.0",
+    "lucide-react": "0.548.0",
     "@google/genai": "^1.28.0",
     "react-dom": "^19.2.0"
   },
